# eda

./: .dockerignore  .env-sample  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
eda/: beat.py  bot.py  cli.py  core.py
eda/core/: asgi.py  models.py  settings.py  urls.py  wsgi.py
eda/food/: admin.py  apps.py  models.py  services.py
eda/food/migrations/: 0001_initial.py  0002_alter_menurecipes_menu_alter_recipe_how_to.py  0003_product_show_in_grocery_list.py  0004_tag_alter_menurecipes_options_recipe_tags.py
eda/telegrambot/: messages.py  utils.py
